--- a/topologicpy-test.ipynb
+++ b/topologicpy-test.ipynb
@@ -7,161 +7,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DGL - Installing required torch library.\n",
-      "Collecting torch\n",
-      "  Obtaining dependency information for torch from https://files.pythonhosted.org/packages/35/3a/a39f354fa3119785be87e2f94ffa2620f8a270c8560f7356358ee62fb4c5/torch-2.3.0-cp311-cp311-manylinux1_x86_64.whl.metadata\n",
-      "  Downloading torch-2.3.0-cp311-cp311-manylinux1_x86_64.whl.metadata (26 kB)\n",
-      "Collecting filelock (from torch)\n",
-      "  Obtaining dependency information for filelock from https://files.pythonhosted.org/packages/41/24/0b023b6537dfc9bae2c779353998e3e99ac7dfff4222fc6126650e93c3f3/filelock-3.14.0-py3-none-any.whl.metadata\n",
-      "  Downloading filelock-3.14.0-py3-none-any.whl.metadata (2.8 kB)\n",
-      "Requirement already satisfied: typing-extensions>=4.8.0 in ./venv/lib/python3.11/site-packages (from torch) (4.10.0)\n",
-      "Collecting sympy (from torch)\n",
-      "  Obtaining dependency information for sympy from https://files.pythonhosted.org/packages/d2/05/e6600db80270777c4a64238a98d442f0fd07cc8915be2a1c16da7f2b9e74/sympy-1.12-py3-none-any.whl.metadata\n",
-      "  Using cached sympy-1.12-py3-none-any.whl.metadata (12 kB)\n",
-      "Requirement already satisfied: networkx in ./venv/lib/python3.11/site-packages (from torch) (3.2.1)\n",
-      "Requirement already satisfied: jinja2 in ./venv/lib/python3.11/site-packages (from torch) (3.1.3)\n",
-      "Collecting fsspec (from torch)\n",
-      "  Obtaining dependency information for fsspec from https://files.pythonhosted.org/packages/ba/a3/16e9fe32187e9c8bc7f9b7bcd9728529faa725231a0c96f2f98714ff2fc5/fsspec-2024.5.0-py3-none-any.whl.metadata\n",
-      "  Downloading fsspec-2024.5.0-py3-none-any.whl.metadata (11 kB)\n",
-      "Collecting nvidia-cuda-nvrtc-cu12==12.1.105 (from torch)\n",
-      "  Obtaining dependency information for nvidia-cuda-nvrtc-cu12==12.1.105 from https://files.pythonhosted.org/packages/b6/9f/c64c03f49d6fbc56196664d05dba14e3a561038a81a638eeb47f4d4cfd48/nvidia_cuda_nvrtc_cu12-12.1.105-py3-none-manylinux1_x86_64.whl.metadata\n",
-      "  Using cached nvidia_cuda_nvrtc_cu12-12.1.105-py3-none-manylinux1_x86_64.whl.metadata (1.5 kB)\n",
-      "Collecting nvidia-cuda-runtime-cu12==12.1.105 (from torch)\n",
-      "  Obtaining dependency information for nvidia-cuda-runtime-cu12==12.1.105 from https://files.pythonhosted.org/packages/eb/d5/c68b1d2cdfcc59e72e8a5949a37ddb22ae6cade80cd4a57a84d4c8b55472/nvidia_cuda_runtime_cu12-12.1.105-py3-none-manylinux1_x86_64.whl.metadata\n",
-      "  Using cached nvidia_cuda_runtime_cu12-12.1.105-py3-none-manylinux1_x86_64.whl.metadata (1.5 kB)\n",
-      "Collecting nvidia-cuda-cupti-cu12==12.1.105 (from torch)\n",
-      "  Obtaining dependency information for nvidia-cuda-cupti-cu12==12.1.105 from https://files.pythonhosted.org/packages/7e/00/6b218edd739ecfc60524e585ba8e6b00554dd908de2c9c66c1af3e44e18d/nvidia_cuda_cupti_cu12-12.1.105-py3-none-manylinux1_x86_64.whl.metadata\n",
-      "  Using cached nvidia_cuda_cupti_cu12-12.1.105-py3-none-manylinux1_x86_64.whl.metadata (1.6 kB)\n",
-      "Collecting nvidia-cudnn-cu12==8.9.2.26 (from torch)\n",
-      "  Obtaining dependency information for nvidia-cudnn-cu12==8.9.2.26 from https://files.pythonhosted.org/packages/ff/74/a2e2be7fb83aaedec84f391f082cf765dfb635e7caa9b49065f73e4835d8/nvidia_cudnn_cu12-8.9.2.26-py3-none-manylinux1_x86_64.whl.metadata\n",
-      "  Using cached nvidia_cudnn_cu12-8.9.2.26-py3-none-manylinux1_x86_64.whl.metadata (1.6 kB)\n",
-      "Collecting nvidia-cublas-cu12==12.1.3.1 (from torch)\n",
-      "  Obtaining dependency information for nvidia-cublas-cu12==12.1.3.1 from https://files.pythonhosted.org/packages/37/6d/121efd7382d5b0284239f4ab1fc1590d86d34ed4a4a2fdb13b30ca8e5740/nvidia_cublas_cu12-12.1.3.1-py3-none-manylinux1_x86_64.whl.metadata\n",
-      "  Using cached nvidia_cublas_cu12-12.1.3.1-py3-none-manylinux1_x86_64.whl.metadata (1.5 kB)\n",
-      "Collecting nvidia-cufft-cu12==11.0.2.54 (from torch)\n",
-      "  Obtaining dependency information for nvidia-cufft-cu12==11.0.2.54 from https://files.pythonhosted.org/packages/86/94/eb540db023ce1d162e7bea9f8f5aa781d57c65aed513c33ee9a5123ead4d/nvidia_cufft_cu12-11.0.2.54-py3-none-manylinux1_x86_64.whl.metadata\n",
-      "  Using cached nvidia_cufft_cu12-11.0.2.54-py3-none-manylinux1_x86_64.whl.metadata (1.5 kB)\n",
-      "Collecting nvidia-curand-cu12==10.3.2.106 (from torch)\n",
-      "  Obtaining dependency information for nvidia-curand-cu12==10.3.2.106 from https://files.pythonhosted.org/packages/44/31/4890b1c9abc496303412947fc7dcea3d14861720642b49e8ceed89636705/nvidia_curand_cu12-10.3.2.106-py3-none-manylinux1_x86_64.whl.metadata\n",
-      "  Using cached nvidia_curand_cu12-10.3.2.106-py3-none-manylinux1_x86_64.whl.metadata (1.5 kB)\n",
-      "Collecting nvidia-cusolver-cu12==11.4.5.107 (from torch)\n",
-      "  Obtaining dependency information for nvidia-cusolver-cu12==11.4.5.107 from https://files.pythonhosted.org/packages/bc/1d/8de1e5c67099015c834315e333911273a8c6aaba78923dd1d1e25fc5f217/nvidia_cusolver_cu12-11.4.5.107-py3-none-manylinux1_x86_64.whl.metadata\n",
-      "  Using cached nvidia_cusolver_cu12-11.4.5.107-py3-none-manylinux1_x86_64.whl.metadata (1.6 kB)\n",
-      "Collecting nvidia-cusparse-cu12==12.1.0.106 (from torch)\n",
-      "  Obtaining dependency information for nvidia-cusparse-cu12==12.1.0.106 from https://files.pythonhosted.org/packages/65/5b/cfaeebf25cd9fdec14338ccb16f6b2c4c7fa9163aefcf057d86b9cc248bb/nvidia_cusparse_cu12-12.1.0.106-py3-none-manylinux1_x86_64.whl.metadata\n",
-      "  Using cached nvidia_cusparse_cu12-12.1.0.106-py3-none-manylinux1_x86_64.whl.metadata (1.6 kB)\n",
-      "Collecting nvidia-nccl-cu12==2.20.5 (from torch)\n",
-      "  Obtaining dependency information for nvidia-nccl-cu12==2.20.5 from https://files.pythonhosted.org/packages/4b/2a/0a131f572aa09f741c30ccd45a8e56316e8be8dfc7bc19bf0ab7cfef7b19/nvidia_nccl_cu12-2.20.5-py3-none-manylinux2014_x86_64.whl.metadata\n",
-      "  Downloading nvidia_nccl_cu12-2.20.5-py3-none-manylinux2014_x86_64.whl.metadata (1.8 kB)\n",
-      "Collecting nvidia-nvtx-cu12==12.1.105 (from torch)\n",
-      "  Obtaining dependency information for nvidia-nvtx-cu12==12.1.105 from https://files.pythonhosted.org/packages/da/d3/8057f0587683ed2fcd4dbfbdfdfa807b9160b809976099d36b8f60d08f03/nvidia_nvtx_cu12-12.1.105-py3-none-manylinux1_x86_64.whl.metadata\n",
-      "  Using cached nvidia_nvtx_cu12-12.1.105-py3-none-manylinux1_x86_64.whl.metadata (1.7 kB)\n",
-      "Collecting triton==2.3.0 (from torch)\n",
-      "  Obtaining dependency information for triton==2.3.0 from https://files.pythonhosted.org/packages/3c/00/84e0006f2025260fa111ddfc66194bd1af731b3ee18e2fd611a00f290b5e/triton-2.3.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata\n",
-      "  Downloading triton-2.3.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (1.4 kB)\n",
-      "Collecting nvidia-nvjitlink-cu12 (from nvidia-cusolver-cu12==11.4.5.107->torch)\n",
-      "  Obtaining dependency information for nvidia-nvjitlink-cu12 from https://files.pythonhosted.org/packages/ff/ff/847841bacfbefc97a00036e0fce5a0f086b640756dc38caea5e1bb002655/nvidia_nvjitlink_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl.metadata\n",
-      "  Downloading nvidia_nvjitlink_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl.metadata (1.5 kB)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in ./venv/lib/python3.11/site-packages (from jinja2->torch) (2.1.5)\n",
-      "Collecting mpmath>=0.19 (from sympy->torch)\n",
-      "  Obtaining dependency information for mpmath>=0.19 from https://files.pythonhosted.org/packages/43/e3/7d92a15f894aa0c9c4b49b8ee9ac9850d6e63b03c9c32c0367a13ae62209/mpmath-1.3.0-py3-none-any.whl.metadata\n",
-      "  Using cached mpmath-1.3.0-py3-none-any.whl.metadata (8.6 kB)\n",
-      "Downloading torch-2.3.0-cp311-cp311-manylinux1_x86_64.whl (779.2 MB)\n",
-      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m779.2/779.2 MB\u001b[0m \u001b[31m379.2 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m eta \u001b[36m0:00:01\u001b[0m[36m0:00:04\u001b[0m\n",
-      "\u001b[?25hUsing cached nvidia_cublas_cu12-12.1.3.1-py3-none-manylinux1_x86_64.whl (410.6 MB)\n",
-      "Using cached nvidia_cuda_cupti_cu12-12.1.105-py3-none-manylinux1_x86_64.whl (14.1 MB)\n",
-      "Using cached nvidia_cuda_nvrtc_cu12-12.1.105-py3-none-manylinux1_x86_64.whl (23.7 MB)\n",
-      "Using cached nvidia_cuda_runtime_cu12-12.1.105-py3-none-manylinux1_x86_64.whl (823 kB)\n",
-      "Downloading nvidia_cudnn_cu12-8.9.2.26-py3-none-manylinux1_x86_64.whl (731.7 MB)\n",
-      "\u001b[2K   \u001b[38;2;249;38;114m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[38;2;249;38;114m╸\u001b[0m\u001b[38;5;237m━\u001b[0m \u001b[32m706.1/731.7 MB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:05\u001b[0m\n",
-      "\u001b[?25h"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: Exception:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_vendor/urllib3/response.py\", line 438, in _error_catcher\n",
-      "    yield\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_vendor/urllib3/response.py\", line 561, in read\n",
-      "    data = self._fp_read(amt) if not fp_closed else b\"\"\n",
-      "           ^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_vendor/urllib3/response.py\", line 527, in _fp_read\n",
-      "    return self._fp.read(amt) if amt is not None else self._fp.read()\n",
-      "           ^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_vendor/cachecontrol/filewrapper.py\", line 94, in read\n",
-      "    self.__buf.write(data)\n",
-      "  File \"/usr/lib/python3.11/tempfile.py\", line 500, in func_wrapper\n",
-      "    return func(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^\n",
-      "OSError: [Errno 28] No space left on device\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_internal/cli/base_command.py\", line 180, in exc_logging_wrapper\n",
-      "    status = run_func(*args)\n",
-      "             ^^^^^^^^^^^^^^^\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_internal/cli/req_command.py\", line 248, in wrapper\n",
-      "    return func(self, options, args)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_internal/commands/install.py\", line 377, in run\n",
-      "    requirement_set = resolver.resolve(\n",
-      "                      ^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_internal/resolution/resolvelib/resolver.py\", line 161, in resolve\n",
-      "    self.factory.preparer.prepare_linked_requirements_more(reqs)\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_internal/operations/prepare.py\", line 565, in prepare_linked_requirements_more\n",
-      "    self._complete_partial_requirements(\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_internal/operations/prepare.py\", line 479, in _complete_partial_requirements\n",
-      "    for link, (filepath, _) in batch_download:\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_internal/network/download.py\", line 183, in __call__\n",
-      "    for chunk in chunks:\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_internal/cli/progress_bars.py\", line 53, in _rich_progress_bar\n",
-      "    for chunk in iterable:\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_internal/network/utils.py\", line 63, in response_chunks\n",
-      "    for chunk in response.raw.stream(\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_vendor/urllib3/response.py\", line 622, in stream\n",
-      "    data = self.read(amt=amt, decode_content=decode_content)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_vendor/urllib3/response.py\", line 560, in read\n",
-      "    with self._error_catcher():\n",
-      "  File \"/usr/lib/python3.11/contextlib.py\", line 158, in __exit__\n",
-      "    self.gen.throw(typ, value, traceback)\n",
-      "  File \"/home/brunoperdigao/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/pip/_vendor/urllib3/response.py\", line 455, in _error_catcher\n",
-      "    raise ProtocolError(\"Connection broken: %r\" % e, e)\n",
-      "pip._vendor.urllib3.exceptions.ProtocolError: (\"Connection broken: OSError(28, 'No space left on device')\", OSError(28, 'No space left on device'))\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[33mWARNING: There was an error checking the latest version of pip.\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "DGL - Error: Could not import torch.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "File \u001b[0;32m~/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/topologicpy/DGL.py:51\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 51\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnn\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "File \u001b[0;32m~/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/topologicpy/DGL.py:63\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 63\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m     64\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnn\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtopologicpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mColor\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Color\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtopologicpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mPlotly\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Plotly\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtopologicpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mDGL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DGL\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpio\u001b[39;00m\n\u001b[1;32m     13\u001b[0m pio\u001b[38;5;241m.\u001b[39mrenderers\u001b[38;5;241m.\u001b[39mdefault \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mjupyterlab\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
-      "File \u001b[0;32m~/repos/Plan-Classification-Topologic-DGL/venv/lib/python3.11/site-packages/topologicpy/DGL.py:70\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDGL - torch library installed correctly.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[0;32m---> 70\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDGL - Error: Could not import torch.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     73\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdgl\u001b[39;00m\n",
-      "\u001b[0;31mException\u001b[0m: DGL - Error: Could not import torch."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from topologicpy.Vertex import Vertex\n",
     "from topologicpy.Face import Face\n",
@@ -172,7 +18,7 @@
     "from topologicpy.Dictionary import Dictionary\n",
     "from topologicpy.Color import Color\n",
     "from topologicpy.Plotly import Plotly\n",
-    "# from topologicpy.DGL import DGL\n",
+    "from topologicpy.DGL import DGL\n",
     "\n",
     "import plotly.io as pio\n",
     "pio.renderers.default = 'jupyterlab'\n"
@@ -1719,6 +1565,7 @@
     }
    ],
    "source": [
+    "\n",
     "Topology.Show(building, renderer='jupyterlab', showVertices=False)"
    ]
   },
